2007-02-22  Berke Durak  <berke.durak@inria.fr>

	Implemented fixes suggested  by Commissar Leroy.

	* fda.ml: .
	* hygiene.ml: .
	* hygiene.mli: .
	* man/ocamlbuild.1: .
	* manual/manual.tex: .
	* ocaml_specific.ml: .
	* options.ml: .
	* signatures.mli: .

2007-02-20  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Add -show-tags.

	* hygiene.ml: Rewrap the error message.
	* main.ml: Do the show_tags job. Move one hook.
	* ocaml_specific.ml: Add -g also in native code.
	* options.ml,
	* signatures.mli: Add the -show-tags option.
	* tags.ml: Fix print.
	* TODO: Add a done entry.

2007-02-16  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Relaxing plural options to spaces.

	* lexers.mli,
	* lexers.mll: Add comma_or_blank_sep_strings.
	* options.ml: Use it.

2007-02-16  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Add a plugin example.

	* manual/myocamlbuild.ml: New.

2007-02-16  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Typos.

	* ocamlbuild-presentation.rslide: .
	* manual/trace.out: .

2007-02-16  Berke Durak  <berke.durak@inria.fr>

	Fixed a few typos and sentences.

	* ocamlbuild-presentation.rslide: .

2007-02-15  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Little changes...

	* ocamlbuild-presentation.rslide: .

2007-02-15  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Slides almost done...

	* manual/trace.out: New. Of course you needed it.
	* ocamlbuild-presentation.rslide: Ditto.

2007-02-15  Berke Durak  <berke.durak@inria.fr>

	Improving slides.

	* ocamlbuild-presentation.rslide: .

2007-02-15  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Slides...

	* ocamlbuild-presentation.rslide: .

2007-02-15  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Working on slides...

	* ocamlbuild-presentation.rslide: .

2007-02-15  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	More slides...

	* ocamlbuild-presentation.rslide: .

2007-02-12  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Keep include dirs uniq.
